# frissonic-formulae

./: .gitignore  LICENSE  README.md  TODO.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  test.csv  vite.config.dev.mts  vite.config.mts
.github/workflows/: main.yaml
frissonic-formulae/: Cargo.toml
frissonic-formulae/src/: lib.rs  path.rs
public/: songs.txt  songs_1.txt  songs_2.txt  songs_original.txt
public/data/: -WN14MIMPtc.json  -aN4Cn3_AtU.json  -krA-ubCQqg.json  -r8vIf80so4.json  02IvYUAJbtY.json  0D9HGM8fsWU.json  0Y1wm7CFRCQ.json  0bEuO7h70ks.json  0hopdWwHAZM.json  0iw1EnLvm88.json  0pzHodjjbV8.json  1esf0efHbjM.json  2x6ST88-E-o.json  36BVqjhH6ko.json  3WupmwnVjPQ.json  3h-JYx76QNM.json  425MgYrkJgo.json  45CiBlJPhWE.json  4RcFPLt3Dd0.json  4aQTyLyDtQo.json  4feedsR0a-8.json  4vSeo3lVTLM.json  5FNHqwMBXPE.json  5K7Frc2lTI8.json  6JhVo2zS8hU.json  6eAkK0CbHcE.json  702-1IboA0k.json  7IBUhI-gqck.json  7Qkno-GGjms.json  8GLstK4g2Z4.json  8YNwZ5N6vug.json  8ZsTfi9aS3c.json  8dG4YON3kRg.json  8fwdb2qn4bk.json  8iNtpUvGP38.json  9llfUGKW4KI.json  A7JorcbiBqk.json  AKJ-lHXpOGM.json  AYNikOG_lUE.json  AyFrec9tR_A.json  (+153 more)
react-testing/: components.json  index.html
react-testing-2/: index.html  package.json  pnpm-lock.yaml  vite.config.mts
react-testing-2/src/: app.tsx
rect3/: README.md  index.html  package.json
rect3/rect3/: Cargo.toml
rect3/src/: app.tsx
rect4/: index.html  package.json
rect4/rect4/: Cargo.toml
rect4/src/: app.tsx  router.tsx
recttesting2/: index.html  package.json  pnpm-lock.yaml
src/: app.tsx  router.tsx
(+51 files in other folders)
